--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://13.233.49.242:3306/parking?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&autoReconnect=true&allowPublicKeyRetrieval=true&
-spring.datasource.username= inguser1
-spring.datasource.password= H@ckath0n
+spring.datasource.username= root
+spring.datasource.password= root
 
 
 sonar.host.url=http://40.114.55.136:9000
